<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_math2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.washington.kpham97.branch2.math4fragment">


    <Button
        android:text="@string/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit"
        android:textSize="36sp"
        android:layout_alignParentBottom="true"
        />

    <TextView
        android:text="@string/question_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:textSize="18sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/questionsgroup">

        <RadioButton
            android:text="@string/fake_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incorrect2"
            android:textSize="36sp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/fake_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incorrect"
            android:textSize="36sp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/real_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/correct"
            android:textSize="36sp"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/fake_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/incorrect3"
            android:textSize="36sp"
            android:layout_weight="1" />

    </RadioGroup>

    <TextView
        android:text="@string/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textSize="36sp"
        tools:ignore="NotSibling"
        android:layout_below="@+id/textView6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="22dp" />

</RelativeLayout>
